# stem_agent

./: .gitignore  CHANGELOG.md  README.md  RELEASE_NOTES_v1.0.md  pyproject.toml
.github/: REPO_METADATA.md
benchmarks/pybugs/: README.md
benchmarks/pybugs/challenge/ch_001/: solution.py  test_solution.py
benchmarks/pybugs/challenge/ch_002/: solution.py  test_solution.py
benchmarks/pybugs/challenge/ch_003/: solution.py  test_solution.py
benchmarks/pybugs/challenge/ch_004/: solution.py  test_solution.py
benchmarks/pybugs/challenge/ch_005/: solution.py  test_solution.py
benchmarks/pybugs/challenge/ch_006/: solution.py  test_solution.py
benchmarks/pybugs/challenge/ch_007/: solution.py  test_solution.py
benchmarks/pybugs/challenge/ch_008/: solution.py  test_solution.py
benchmarks/pybugs/dev/task_013/: solution.py  test_solution.py
benchmarks/pybugs/dev/task_014/: solution.py  test_solution.py
benchmarks/pybugs/dev/task_015/: solution.py  test_solution.py
blueprint_repair/: __init__.py  _harness.py  agent.py  blueprint.py  evolve.py  perturb.py  policy.py
docs/: writeup.md
docs/evaluation/: perturbation_report.json
stem_agent/: __init__.py  _harness.py  agent.py  analysis.py  blueprint.py  cli.py  evolve.py  llm.py  primitives.py  runner.py  stats.py
tests/: conftest.py  test_agent.py  test_agent_breakit.py  test_blueprint.py  test_challenge_split.py  test_compare.py  test_docs.py  test_evolve.py  test_llm_offline.py  test_llm_stub.py  test_perturb.py  test_pipeline.py  test_policy.py  test_primitives.py  test_runner.py  test_stats.py
(+58 files in other folders)
